--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,3 +15,58 @@ body {
 	margin: 0;
 	overflow: hidden;
 }
+
+h1 {
+  color: purple;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.container {
+  max-width: 768px;
+  width: 80%;
+  margin: auto;
+}
+
+#bill-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  padding: 9px;
+}
+
+.form-group label {
+  font-size: 16px;
+  font-weight: 600;
+  letter-spacing: 1px;
+  padding-bottom: 0.8rem;
+}
+
+.form-group:last-child {
+  margin-top: 16px;
+  align-items: center;
+  display: flex;
+}
+
+.form-group button {
+  border: none;
+  outline: none;
+  width: max-content;
+  padding: 16px 32px;
+  font-size: 24px;
+  cursor: pointer;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  border-radius: 5px;
+}
+
+input[type="text"] {
+  padding: 16px;
+  border-radius: 0.2rem;
+  font-size: 24px;
+}
+
