cash register commit

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,72 +1,82 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,700&display=swap');
-
 * {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: Roboto,
-    sans-serif;
-  display: flex;
-  flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	height: 100vh;
-	margin: 0;
-	overflow: hidden;
-}
-
-h1 {
-  color: purple;
-  font-size: 24px;
-  font-weight: 600;
+  margin: 0;
+  padding: 0;
 }
 
 .container {
-  max-width: 768px;
-  width: 80%;
-  margin: auto;
+  width: 700px;
+  margin: 80px auto;
+  /* background-color: red; */
+  padding: 40px;
+  text-align: center;
 }
 
-#bill-form {
-  display: flex;
-  flex-direction: column;
+table,
+th,
+td {
+  border: 1px solid black;
+  border-collapse: collapse;
+  margin-bottom: 40px;
 }
 
-.form-group {
-  display: flex;
-  flex-direction: column;
-  padding: 9px;
+th,
+td {
+  padding: 20px;
 }
 
-.form-group label {
-  font-size: 16px;
-  font-weight: 600;
-  letter-spacing: 1px;
-  padding-bottom: 0.8rem;
+h1 {
+  font-size: 45px;
+  /* color: purple; */
+  margin-bottom: 40px;
 }
 
-.form-group:last-child {
-  margin-top: 16px;
-  align-items: center;
-  display: flex;
+label {
+  font-size: 26px;
+  font-weight: 500;
 }
 
-.form-group button {
-  border: none;
-  outline: none;
-  width: max-content;
-  padding: 16px 32px;
-  font-size: 24px;
-  cursor: pointer;
-  text-transform: uppercase;
-  letter-spacing: 1px;
+.cash {
+  margin: 40px 0;
+}
+
+input {
+  font-size: 20px;
+  /* background-color: black; */
+  /* color: white; */
+  padding: 5px;
+  width: 150px;
+  margin-left: 15px;
   border-radius: 5px;
 }
 
-input[type="text"] {
-  padding: 16px;
-  border-radius: 0.2rem;
-  font-size: 24px;
+#balance {
+  padding: 6px 18px;
+  font-size: 16px;
+  border-radius: 5px;
+  background-color: Green;
+  color: white;
+  border: none;
+  cursor: pointer;
 }
 
+#status-message {
+  margin: 30px 0;
+  font-size: 24px;
+  font-weight: 700;
+}
+
+#change-list {
+  line-height: 2;
+}
+
+.funds {
+  color: red;
+}
+
+.closed {
+  color: gray;
+}
+
+.open {
+  color: Blue;
+}
