--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,6 @@
 .container {
   width: 700px;
   margin: 80px auto;
-  /* background-color: red; */
   padding: 40px;
   text-align: center;
 }
@@ -26,7 +25,6 @@ td {
 
 h1 {
   font-size: 45px;
-  /* color: purple; */
   margin-bottom: 40px;
 }
 
@@ -41,8 +39,6 @@ label {
 
 input {
   font-size: 20px;
-  /* background-color: black; */
-  /* color: white; */
   padding: 5px;
   width: 150px;
   margin-left: 15px;
@@ -53,7 +49,7 @@ input {
   padding: 6px 18px;
   font-size: 16px;
   border-radius: 5px;
-  background-color: Green;
+  background-color: green;
   color: white;
   border: none;
   cursor: pointer;
@@ -78,5 +74,5 @@ input {
 }
 
 .open {
-  color: Blue;
+  color: blue;
 }
