--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,13 +24,17 @@ td {
 }
 
 h1 {
-  font-size: 45px;
+  font-size: 50px;
   margin-bottom: 40px;
+}
+
+span {
+  color: blue;
 }
 
 label {
   font-size: 26px;
-  font-weight: 500;
+  font-weight: 700;
 }
 
 .cash {
@@ -46,7 +50,7 @@ input {
 }
 
 #balance {
-  padding: 6px 18px;
+  padding: 10px 22px;
   font-size: 16px;
   border-radius: 5px;
   background-color: green;
